--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "",
   "description": "",
-  "minimum-stability": "",
+  "minimum-stability": "stable",
   "license": "",
   "authors": [
     {
